--- a/login.html
+++ b/login.html
@@ -18,17 +18,18 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </head>
+<body class="color">
 
 <header>
   <div class="container">
     <div class="page-header">
-      <h1>Jakies Logo </h1>
+    <img src="src/banner.jpg" alt="Smiley face">
 </header>
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">zwyzywaj.pl</a>
+      <a class="navbar-brand" href="#">ugotujZ.pl</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
@@ -234,6 +235,7 @@
 </form>
 </span>
 
+</body>
 <footer class="footer">
       <div class="container" style="text-align:center;">
         <p class="text-muted">Place sticky footer content here.</p>
