--- a/login.html
+++ b/login.html
@@ -23,211 +23,57 @@
 </head>
 <body class="color">
 
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">ugotujZ.pl</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
       </div>
-      <div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">Strona Głowna</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Napisz do nas</a></li>
-          <li><a href="#">O nas</a></li>
+          <li class="active"><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+             <li><a href="#">Link</a></li>
+             <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+          <li>
+             <form class="navbar-form navbar-left" role="search" style="display:inline;">
+                <span class="form-group">
+                  <input type="text" class="form-control" placeholder="Search">
+                </span>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+          </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Rejestruj </a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Zaloguj </a></li>
-        </ul>
-      </div>
-    </div>
+
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
   </nav>
 
-<header>
-  <div class="container">
-    <div class="page-header">
 
-</header>
+
 
 <!-- CONTENT -->
-<!-- <span><img src="img/logo.jpg" alt="Smiley face" style="float: right;"></span> -->
-<!-- <span class="frame">
-<form id="movieForm" method="post">
-    <div class="form-group">
-        <div class="row">
-            <div class="col-xs-8 form-inline">
-                <label class="control-label">
-                  <label>Imie:</label>
-                  <input type="text" class="form-control" name="title" placeholder="Imie" />
-                </label>
 
-            </div>
-        </div>
-    </div>
-
-<div class="form-group">
-  <div class="row">
-    <div class="col-xs-8 form-inline">
-            <label>Płeć:</label>
-            <select class="form-control">
-              <option value="sex">---</option>
-               <option value="male">Męzczyzna</option>
-               <option value="female">Kobieta</option>
-            </select>
-    </div>
-  </div>
-
-</div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-xs-8 form-inline">
-            <label class="control-label">
-            <label>Email:</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-            </label>
-            </div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-xs-10 form-inline">
-            <label class="control-label">
-              <label>Haslo:</label>
-             <input type="password" class="form-control" id="password" placeholder="Haslo">
-            </label>
-            </div>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-xs-10 form-inline">
-            <label class="control-label">
-              <label>Potwierdz Haslo:</label>
-            <input type="password" class="form-control" id="password" placeholder="Potwierdz Haslo">
-            </label>
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-      <div class="row">
-        <div class="col-lg-12 form-inline">
-<label>Data Urodzenia:</label>
-<label class="control-label"></label>
-
-
-
-  <select name="DOBDay" class="form-control">
-  <option> Dzień: </option>
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-  <option value="5">5</option>
-  <option value="6">6</option>
-  <option value="7">7</option>
-  <option value="8">8</option>
-  <option value="9">9</option>
-  <option value="10">10</option>
-  <option value="11">11</option>
-  <option value="12">12</option>
-  <option value="13">13</option>
-  <option value="14">14</option>
-  <option value="15">15</option>
-  <option value="16">16</option>
-  <option value="17">17</option>
-  <option value="18">18</option>
-  <option value="19">19</option>
-  <option value="20">20</option>
-  <option value="21">21</option>
-  <option value="22">22</option>
-  <option value="23">23</option>
-  <option value="24">24</option>
-  <option value="25">25</option>
-  <option value="26">26</option>
-  <option value="27">27</option>
-  <option value="28">28</option>
-  <option value="29">29</option>
-  <option value="30">30</option>
-  <option value="31">31</option>
-  </select>
-   <select name="DOBMonth" class="form-control">
-  <option>Miesiąc:</option>
-  <option value="January">Styczeń</option>
-  <option value="Febuary">Luty</option>
-  <option value="March">Marzec</option>
-  <option value="April">Kwiecień</option>
-  <option value="May">Maj</option>
-  <option value="June">Czerwiec</option>
-  <option value="July">Lipiec</option>
-  <option value="August">Sierpień</option>
-  <option value="September">Wrzesień</option>
-  <option value="October">Październik</option>
-  <option value="November">Listopad</option>
-  <option value="December">Grudzień</option>
-  </select>
-
-  <select name="DOBYear" class="form-control">
-  <option> Rok: </option>
-  <option value="1993">1993</option>
-  <option value="1992">1992</option>
-  <option value="1991">1991</option>
-  <option value="1990">1990</option>
-  <option value="1989">1989</option>
-  <option value="1988">1988</option>
-  <option value="1987">1987</option>
-  <option value="1986">1986</option>
-  <option value="1985">1985</option>
-  <option value="1984">1984</option>
-  <option value="1983">1983</option>
-  <option value="1982">1982</option>
-  <option value="1981">1981</option>
-  <option value="1980">1980</option>
-  <option value="1979">1979</option>
-  <option value="1978">1978</option>
-  <option value="1977">1977</option>
-  <option value="1976">1976</option>
-  <option value="1975">1975</option>
-  <option value="1974">1974</option>
-  <option value="1973">1973</option>
-  <option value="1972">1972</option>
-  <option value="1971">1971</option>
-  <option value="1970">1970</option>
-  <option value="1969">1969</option>
-  <option value="1968">1968</option>
-  <option value="1967">1967</option>
-  <option value="1966">1966</option>
-  <option value="1965">1965</option>
-  <option value="1964">1964</option>
-  <option value="1963">1963</option>
-  <option value="1962">1962</option>
-  <option value="1961">1961</option>
-  <option value="1960">1960</option>
-  <option value="1959">1959</option>
-  <option value="1958">1958</option>
-  <option value="1957">1957</option>
-  <option value="1956">1956</option>
-  <option value="1955">1955</option>
-  <option value="1954">1954</option>
-  <option value="1953">1953</option>
-  <option value="1952">1952</option>
-  <option value="1951">1951</option>
-  <option value="1950">1950</option>
-  <option value="1949">1949</option>
-  <option value="1948">1948</option>
-  <option value="1947">1947</option>
-    </select>
-</div>
-  </div>
-</div>
-</div>
-  <div class="form-group">
-    <div class="row">
-    <button type="submit" class="btn btn-default">Zarejestruj</button>
-  </div>
-</div>
-</form>
-</span> -->
 <!-- slider -->
 <div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">
         <!-- Loading Screen -->
@@ -259,183 +105,6 @@
         <span data-u="arrowright" class="jssora12r" style="top:123px;right:0px;width:30px;height:46px;" data-autocenter="2"></span>
 
     </div>
-    <span class="frame">
-    <form id="movieForm" method="post">
-        <div class="form-group">
-            <div class="row">
-                <div class="col-xs-8 form-inline">
-                    <label class="control-label">
-                      <label>Imie:</label>
-                      <input type="text" class="form-control" name="title" placeholder="Imie" />
-                    </label>
-
-                </div>
-            </div>
-        </div>
-
-    <div class="form-group">
-      <div class="row">
-        <div class="col-xs-8 form-inline">
-                <label>Płeć:</label>
-                <select class="form-control">
-                  <option value="sex">---</option>
-                   <option value="male">Męzczyzna</option>
-                   <option value="female">Kobieta</option>
-                </select>
-        </div>
-      </div>
-
-    </div>
-        <div class="form-group">
-            <div class="row">
-                <div class="col-xs-8 form-inline">
-                <label class="control-label">
-                <label>Email:</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                </label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="row">
-                <div class="col-xs-10 form-inline">
-                <label class="control-label">
-                  <label>Haslo:</label>
-                 <input type="password" class="form-control" id="password" placeholder="Haslo">
-                </label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="row">
-                <div class="col-xs-10 form-inline">
-                <label class="control-label">
-                  <label>Potwierdz Haslo:</label>
-                <input type="password" class="form-control" id="password" placeholder="Potwierdz Haslo">
-                </label>
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-          <div class="row">
-            <div class="col-lg-12 form-inline">
-    <label>Data Urodzenia:</label>
-    <label class="control-label"></label>
-
-
-
-      <select name="DOBDay" class="form-control">
-      <option> Dzień: </option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-      <option value="11">11</option>
-      <option value="12">12</option>
-      <option value="13">13</option>
-      <option value="14">14</option>
-      <option value="15">15</option>
-      <option value="16">16</option>
-      <option value="17">17</option>
-      <option value="18">18</option>
-      <option value="19">19</option>
-      <option value="20">20</option>
-      <option value="21">21</option>
-      <option value="22">22</option>
-      <option value="23">23</option>
-      <option value="24">24</option>
-      <option value="25">25</option>
-      <option value="26">26</option>
-      <option value="27">27</option>
-      <option value="28">28</option>
-      <option value="29">29</option>
-      <option value="30">30</option>
-      <option value="31">31</option>
-      </select>
-       <select name="DOBMonth" class="form-control">
-      <option>Miesiąc:</option>
-      <option value="January">Styczeń</option>
-      <option value="Febuary">Luty</option>
-      <option value="March">Marzec</option>
-      <option value="April">Kwiecień</option>
-      <option value="May">Maj</option>
-      <option value="June">Czerwiec</option>
-      <option value="July">Lipiec</option>
-      <option value="August">Sierpień</option>
-      <option value="September">Wrzesień</option>
-      <option value="October">Październik</option>
-      <option value="November">Listopad</option>
-      <option value="December">Grudzień</option>
-      </select>
-
-      <select name="DOBYear" class="form-control">
-      <option> Rok: </option>
-      <option value="1993">1993</option>
-      <option value="1992">1992</option>
-      <option value="1991">1991</option>
-      <option value="1990">1990</option>
-      <option value="1989">1989</option>
-      <option value="1988">1988</option>
-      <option value="1987">1987</option>
-      <option value="1986">1986</option>
-      <option value="1985">1985</option>
-      <option value="1984">1984</option>
-      <option value="1983">1983</option>
-      <option value="1982">1982</option>
-      <option value="1981">1981</option>
-      <option value="1980">1980</option>
-      <option value="1979">1979</option>
-      <option value="1978">1978</option>
-      <option value="1977">1977</option>
-      <option value="1976">1976</option>
-      <option value="1975">1975</option>
-      <option value="1974">1974</option>
-      <option value="1973">1973</option>
-      <option value="1972">1972</option>
-      <option value="1971">1971</option>
-      <option value="1970">1970</option>
-      <option value="1969">1969</option>
-      <option value="1968">1968</option>
-      <option value="1967">1967</option>
-      <option value="1966">1966</option>
-      <option value="1965">1965</option>
-      <option value="1964">1964</option>
-      <option value="1963">1963</option>
-      <option value="1962">1962</option>
-      <option value="1961">1961</option>
-      <option value="1960">1960</option>
-      <option value="1959">1959</option>
-      <option value="1958">1958</option>
-      <option value="1957">1957</option>
-      <option value="1956">1956</option>
-      <option value="1955">1955</option>
-      <option value="1954">1954</option>
-      <option value="1953">1953</option>
-      <option value="1952">1952</option>
-      <option value="1951">1951</option>
-      <option value="1950">1950</option>
-      <option value="1949">1949</option>
-      <option value="1948">1948</option>
-      <option value="1947">1947</option>
-        </select>
-    </div>
-      </div>
-    </div>
-    </div>
-      <div class="form-group">
-        <div class="row">
-        <button type="submit" class="btn btn-default">Zarejestruj</button>
-      </div>
-    </div>
-    </form>
-    </span>
 
 
 </body>
