--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- <link rel="stylesheet" src="css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <!-- Optional theme -->
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
@@ -33,43 +33,43 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#">ugotujZ.pl</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-             <li><a href="#">Link</a></li>
-             <li><a href="#">Link</a></li>
+          <li><a href="#">Strona Glowna</a></li>
+          <li><a href="#">Przepisy</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              <li><a href="#">Facebook</a></li>
               <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><a href="#">Google+</a></li>
               <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">Twitter</a></li>
             </ul>
-          </li>
-          <li>
-             <form class="navbar-form navbar-left" role="search" style="display:inline;">
-                <span class="form-group">
-                  <input type="text" class="form-control" placeholder="Search">
-                </span>
-                <button type="submit" class="btn btn-default">Submit</button>
-              </form>
-          </li>
+            <li>
+              <form class="navbar-form" role="search">
+              <div class="form-group" style="padding:0%!important;">
+               <input type="text" class="form-control" placeholder="Wyszukaj przepis!">
+               <button type="submit" class="btn btn-default">Wyszukaj</button>
+             </div>
+           </form>
         </ul>
+          <div >
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#">Zarejestruj!</a></li>
+                  <li><a href="#">Zaloguj</a></li>
+              </ul>
+          </div>
 
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 
-
+<br>
 
 
 <!-- CONTENT -->
