--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
           <div >
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#">Zarejestruj!</a></li>
-                  <li><a href="#">Zaloguj</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#myModal">Zaloguj</a></li>
               </ul>
           </div>
 
@@ -69,7 +69,44 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-<br>
+
+  <div class="container">
+
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">Zaloguj się</h4>
+                  </div>
+                  <div class="modal-body">
+                      <div class="form-group">
+                          <label for="usr">Name:</label>
+                          <input type="text" class="form-control" id="usr">
+                      </div>
+                      <div class="form-group">
+                          <label for="pwd">Password:</label>
+                          <input type="password" class="form-control" id="pwd">
+                      </div>
+                      <div class="checkbox">
+                          <label>
+                              <input type="checkbox" value="remember-me"> Remember me
+                          </label>
+                      </div>
+                      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                  </div>
+                  <div class="modal-footer">
+                      Nie masz konta? <a href="#">Zarejestruj się!</a>
+
+                  </div>
+              </div>
+
+          </div>
+      </div>
+  </div><!-- end of modal-->
 
 
 <!-- CONTENT -->
