--- a/login.html
+++ b/login.html
@@ -84,19 +84,19 @@
                   </div>
                   <div class="modal-body">
                       <div class="form-group">
-                          <label for="usr">Name:</label>
-                          <input type="text" class="form-control" id="usr">
+                          <label for="usr">Login:</label>
+                          <input type="text" class="form-control" id="usr" placeholder="Login">
                       </div>
                       <div class="form-group">
-                          <label for="pwd">Password:</label>
-                          <input type="password" class="form-control" id="pwd">
+                          <label for="pwd">Hasło:</label>
+                          <input type="password" class="form-control" id="pwd" placeholder="Hasło">
                       </div>
                       <div class="checkbox">
                           <label>
-                              <input type="checkbox" value="remember-me"> Remember me
+                              <input type="checkbox" value="remember-me"> Zapamiętaj mnie!
                           </label>
                       </div>
-                      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                      <button class="btn btn-lg btn-primary btn-block" type="submit">Zaloguj</button>
                   </div>
                   <div class="modal-footer">
                       Nie masz konta? <a href="#">Zarejestruj się!</a>
