--- a/login.html
+++ b/login.html
@@ -1,13 +1,18 @@
 
 <head>
   <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="footer, contact, form, icons" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- <link rel="stylesheet" src="css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="css/bootstrap.css">
   <!-- Optional theme -->
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 
   <!-- Latest compiled and minified JavaScript -->
   <script href="js/bootstrap.min.js"></script>
@@ -39,7 +44,6 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">Strona Glowna</a></li>
           <li><a href="#">Przepisy</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
@@ -110,43 +114,90 @@
 
 
 <!-- CONTENT -->
+<body class="landing">
 
+</body>
 <!-- slider -->
-<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">
-        <!-- Loading Screen -->
-        <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
-            <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-            <div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
-        </div>
-        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
-            <div data-p="112.50" style="display: none;">
-                <img data-u="image" src="img/02.jpg" />
-            </div>
-            <div data-p="112.50" style="display: none;">
-                <img data-u="image" src="img/04.jpg" />
-            </div>
-            <div data-p="112.50" style="display: none;">
-                <img data-u="image" src="img/05.jpg" />
-            </div>
-            <div data-p="112.50" style="display: none;">
-                <img data-u="image" src="img/09.jpg" />
-            </div>
-        </div>
-        <!-- Bullet Navigator -->
-        <div data-u="navigator" class="jssorb05" style="bottom:16px;right:6px;" data-autocenter="1">
-            <!-- bullet navigator item prototype -->
-            <div data-u="prototype" style="width:16px;height:16px;"></div>
-        </div>
-        <!-- Arrow Navigator -->
-        <span data-u="arrowleft" class="jssora12l" style="top:123px;left:0px;width:30px;height:46px;" data-autocenter="2"></span>
-        <span data-u="arrowright" class="jssora12r" style="top:123px;right:0px;width:30px;height:46px;" data-autocenter="2"></span>
+<!--<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">-->
+        <!--&lt;!&ndash; Loading Screen &ndash;&gt;-->
+        <!--<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">-->
+            <!--<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>-->
+            <!--<div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>-->
+        <!--</div>-->
+        <!--<div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">-->
+            <!--<div data-p="112.50" style="display: none;">-->
+                <!--<img data-u="image" src="img/02.jpg" />-->
+            <!--</div>-->
+            <!--<div data-p="112.50" style="display: none;">-->
+                <!--<img data-u="image" src="img/04.jpg" />-->
+            <!--</div>-->
+            <!--<div data-p="112.50" style="display: none;">-->
+                <!--<img data-u="image" src="img/05.jpg" />-->
+            <!--</div>-->
+            <!--<div data-p="112.50" style="display: none;">-->
+                <!--<img data-u="image" src="img/09.jpg" />-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; Bullet Navigator &ndash;&gt;-->
+        <!--<div data-u="navigator" class="jssorb05" style="bottom:16px;right:6px;" data-autocenter="1">-->
+            <!--&lt;!&ndash; bullet navigator item prototype &ndash;&gt;-->
+            <!--<div data-u="prototype" style="width:16px;height:16px;"></div>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; Arrow Navigator &ndash;&gt;-->
+        <!--<span data-u="arrowleft" class="jssora12l" style="top:123px;left:0px;width:30px;height:46px;" data-autocenter="2"></span>-->
+        <!--<span data-u="arrowright" class="jssora12r" style="top:123px;right:0px;width:30px;height:46px;" data-autocenter="2"></span>-->
 
-    </div>
+    <!--</div>-->
+
+  <footer class="footer-distributed">
+
+      <div class="footer-left">
+
+          <h3>Company<span>logo</span></h3>
+
+          <p class="footer-links">
+              <a href="#">Home</a>
+              ·
+              <a href="#">Blog</a>
+              ·
+              <a href="#">Pricing</a>
+              ·
+              <a href="#">About</a>
+              ·
+              <a href="#">Faq</a>
+              ·
+              <a href="#">Contact</a>
+          </p>
+
+          <p class="footer-company-name">Company Name &copy; 2015</p>
+
+          <div class="footer-icons">
+
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="#"><i class="fa fa-github"></i></a>
+
+          </div>
+
+      </div>
+
+      <div class="footer-right">
+
+          <p>Contact Us</p>
+
+          <form action="#" method="post">
+
+              <input type="text" name="email" placeholder="Email" />
+              <textarea name="message" placeholder="Message"></textarea>
+              <button>Send</button>
+
+          </form>
+
+      </div>
+
+  </footer>
+
 
 
 </body>
-<footer class="footer">
-      <div class="container" style="text-align:center;">
-        <p class="text-muted">Place sticky footer content here.</p>
-      </div>
-</footer>
