--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-
+<html>
 <head>
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <!-- Optional theme -->
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/footer-distributed-with-contact-form.css">
+
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 
@@ -23,6 +24,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="js/jssor.slider.mini.js"></script>
+
     <script type="text/javascript" src="js/slider.js"></script>
 
 </head>
@@ -118,43 +120,40 @@
 
 </body>
 <!-- slider -->
-<!--<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">-->
-        <!--&lt;!&ndash; Loading Screen &ndash;&gt;-->
-        <!--<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">-->
-            <!--<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>-->
-            <!--<div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>-->
-        <!--</div>-->
-        <!--<div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">-->
-            <!--<div data-p="112.50" style="display: none;">-->
-                <!--<img data-u="image" src="img/02.jpg" />-->
-            <!--</div>-->
-            <!--<div data-p="112.50" style="display: none;">-->
-                <!--<img data-u="image" src="img/04.jpg" />-->
-            <!--</div>-->
-            <!--<div data-p="112.50" style="display: none;">-->
-                <!--<img data-u="image" src="img/05.jpg" />-->
-            <!--</div>-->
-            <!--<div data-p="112.50" style="display: none;">-->
-                <!--<img data-u="image" src="img/09.jpg" />-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; Bullet Navigator &ndash;&gt;-->
-        <!--<div data-u="navigator" class="jssorb05" style="bottom:16px;right:6px;" data-autocenter="1">-->
-            <!--&lt;!&ndash; bullet navigator item prototype &ndash;&gt;-->
-            <!--<div data-u="prototype" style="width:16px;height:16px;"></div>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; Arrow Navigator &ndash;&gt;-->
-        <!--<span data-u="arrowleft" class="jssora12l" style="top:123px;left:0px;width:30px;height:46px;" data-autocenter="2"></span>-->
-        <!--<span data-u="arrowright" class="jssora12r" style="top:123px;right:0px;width:30px;height:46px;" data-autocenter="2"></span>-->
+<div id="jssor_1" style="position: relative; margin: 0 auto; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden; visibility: hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
+            <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block; top: 0px; left: 0px; width: 100%; height: 100%;"></div>
+            <div style="position:absolute;display:block;background:url('img/loading.gif') no-repeat center center;top:0px;left:0px;width:100%;height:100%;"></div>
+        </div>
+        <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/02.jpg" />
+            </div>
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/04.jpg" />
+            </div>
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/05.jpg" />
+            </div>
+            <div data-p="112.50" style="display: none;">
+                <img data-u="image" src="img/09.jpg" />
+            </div>
+        </div>
+        <!-- Bullet Navigator -->
+        <div data-u="navigator" class="jssorb05" style="bottom:16px;right:6px;" data-autocenter="1">
+            <!-- bullet navigator item prototype -->
+            <div data-u="prototype" style="width:16px;height:16px;"></div>
+        </div>
+        <!-- Arrow Navigator -->
+        <span data-u="arrowleft" class="jssora12l" style="top:123px;left:0px;width:30px;height:46px;" data-autocenter="2"></span>
+        <span data-u="arrowright" class="jssora12r" style="top:123px;right:0px;width:30px;height:46px;" data-autocenter="2"></span>
 
-    <!--</div>-->
+    </div>
 
   <footer class="footer-distributed">
-
       <div class="footer-left">
-
-          <h3>Company<span>logo</span></h3>
-
+          <h3>ugotuj<span>Z</span></h3>
           <p class="footer-links">
               <a href="#">Home</a>
               ·
@@ -168,36 +167,22 @@
               ·
               <a href="#">Contact</a>
           </p>
-
           <p class="footer-company-name">Company Name &copy; 2015</p>
-
           <div class="footer-icons">
-
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-linkedin"></i></a>
               <a href="#"><i class="fa fa-github"></i></a>
-
           </div>
-
       </div>
-
       <div class="footer-right">
-
           <p>Contact Us</p>
-
           <form action="#" method="post">
-
               <input type="text" name="email" placeholder="Email" />
               <textarea name="message" placeholder="Message"></textarea>
               <button>Send</button>
-
           </form>
-
       </div>
-
   </footer>
-
-
-
 </body>
+</html>
